fix : too long tags induce css issue of the label.

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -32,7 +32,8 @@
 
 
 .result-item{
-    width: 80%;
+    min-width: 80%;
+    width: fit-content;
     font-size: 2rem;
     background-color: rgb(239, 230, 230);
     border-radius: .5rem;
